--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/conta/conta-list.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/conta/conta-list.html
@@ -23,11 +23,10 @@
 				            
 			            <div layout="row" layout-align="end center" ng-init="currentOption = true">
 				            <md-button class="md-raised" ng-click="!moreFilters ? listByFilters() : listContaByMoreFilters()">Filtrar</md-button>
-				            <md-button class="md-raised" ng-click="openMaisOpcoes(); currentOption = !currentOption" style="padding-left: 14px;">
-				            	Mais opções
-				            	<i ng-if="!currentOption" style="font-size: 22px;margin: 0 10px 5px 13px;" class="zmdi zmdi-chevron-down"></i>
-				            	<i ng-if="currentOption" style="font-size: 22px;margin: 0 10px 5px 13px;" class="zmdi zmdi-chevron-up"></i> 
-				            </md-button>
+<!-- 				            <md-button class="md-raised" ng-click="openMaisOpcoes(); currentOption = !currentOption" style="padding-left: 14px;"> -->
+<!-- 				            	<i ng-if="!currentOption" style="font-size: 22px;margin: 0 10px 5px 13px;" class="zmdi zmdi-chevron-down"></i> -->
+<!-- 				            	<i ng-if="currentOption" style="font-size: 22px;margin: 0 10px 5px 13px;" class="zmdi zmdi-chevron-up"></i>  -->
+<!-- 				            </md-button> -->
 			            </div>			            			            			            			            
 			    	</div>
 			    	
