--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/movimentacao/movimentacao-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/movimentacao/movimentacao-form.html
@@ -49,14 +49,14 @@
 									                </div>
 									            </md-input-container>
 												
-									            <md-input-container layout="column" flex="30" style="margin-left:30px">
-										    		<label>Porcentagem da diferença</label>
-									                <input type="number" ng-disabled="model.movimentacao.entity.id && model.movimentacao.entity.status != 'RASCUNHO'"" name="porcentagemDiferenca" ng-model="model.movimentacao.entity.porcentagemDiferenca">
+<!-- 									            <md-input-container layout="column" flex="30" style="margin-left:30px"> -->
+<!-- 										    		<label>Porcentagem da diferença</label> -->
+<!-- 									                <input type="number" ng-disabled="model.movimentacao.entity.id && model.movimentacao.entity.status != 'RASCUNHO'"" name="porcentagemDiferenca" ng-model="model.movimentacao.entity.porcentagemDiferenca"> -->
 									
-									                <div ng-messages="model.movimentacao.form.porcentagemDiferenca.$error">
-									                	<div ng-message="required" ng-if="model.movimentacao.form.$submitted">Campo obrigatório</div>
-									                </div>
-									            </md-input-container>
+<!-- 									                <div ng-messages="model.movimentacao.form.porcentagemDiferenca.$error"> -->
+<!-- 									                	<div ng-message="required" ng-if="model.movimentacao.form.$submitted">Campo obrigatório</div> -->
+<!-- 									                </div> -->
+<!-- 									            </md-input-container> -->
 									        </div>
 											
 											<div layout="row">
