--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/file/reports/movimentacao/template-movimentacao-contas.jrxml
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/file/reports/movimentacao/template-movimentacao-contas.jrxml
@@ -115,13 +115,6 @@ where $X{IN, conta.id, contasId}]]>
 				<reportElement x="0" y="0" width="120" height="79" uuid="aa4d1da6-8b20-47de-befe-e46a2b788c0a"/>
 				<imageExpression><![CDATA[$P{logo_DIR}]]></imageExpression>
 			</image>
-			<textField>
-				<reportElement x="303" y="59" width="244" height="20" uuid="20c3832c-1283-418b-8d45-4314c026a865">
-					<printWhenExpression><![CDATA[$P{inicio} != null &&  $P{termino} != null]]></printWhenExpression>
-				</reportElement>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA["Período de " + new java.text.SimpleDateFormat("dd/MM/yyyy").format($P{inicio}) + " até " + new java.text.SimpleDateFormat("dd/MM/yyyy").format($P{termino})]]></textFieldExpression>
-			</textField>
 			<line>
 				<reportElement x="0" y="90" width="802" height="1" uuid="aa3d33c1-7b33-4644-bb80-89acdd4a99fb"/>
 			</line>
@@ -283,7 +276,9 @@ where $X{IN, conta.id, contasId}]]>
 							<jr:columnFooter style="table_CH" height="30" rowSpan="1"/>
 							<jr:detailCell style="table" height="43" rowSpan="1">
 								<textField>
-									<reportElement x="0" y="0" width="90" height="43" uuid="a6315ec0-b8fb-4bdc-9445-3b2f54a36d44"/>
+									<reportElement x="0" y="0" width="90" height="43" uuid="a6315ec0-b8fb-4bdc-9445-3b2f54a36d44">
+										<printWhenExpression><![CDATA[$F{porcentagem_diferenca} != null]]></printWhenExpression>
+									</reportElement>
 									<textElement textAlignment="Center" verticalAlignment="Middle"/>
 									<textFieldExpression><![CDATA[$F{porcentagem_diferenca} + "%"]]></textFieldExpression>
 								</textField>
