--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/repasse/repasse-list.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/repasse/repasse-list.html
@@ -25,11 +25,10 @@
 					            
 				            <div layout="row" layout-align="end center" ng-init="currentOption = 'down'">
 					            <md-button class="md-raised" ng-click="!moreFilters ? listByFilters() : listRepasseByMoreFilters()">Filtrar</md-button>
-					            <md-button class="md-raised" ng-click="openMaisOpcoes(); currentOption = !currentOption" style="padding-left: 14px;">
-					            	Mais opções
-					            	<i ng-if="!currentOption" style="font-size: 22px;margin: 0 10px 5px 13px;" class="zmdi zmdi-chevron-down"></i>
-					            	<i ng-if="currentOption" style="font-size: 22px;margin: 0 10px 5px 13px;" class="zmdi zmdi-chevron-up"></i> 
-					            </md-button>
+<!-- 					            <md-button class="md-raised" ng-click="openMaisOpcoes(); currentOption = !currentOption" style="padding-left: 14px;"> -->
+<!-- 					            	<i ng-if="!currentOption" style="font-size: 22px;margin: 0 10px 5px 13px;" class="zmdi zmdi-chevron-down"></i> -->
+<!-- 					            	<i ng-if="currentOption" style="font-size: 22px;margin: 0 10px 5px 13px;" class="zmdi zmdi-chevron-up"></i>  -->
+<!-- 					            </md-button> -->
 				            </div>			            			            			            			            
 				    	</div>
 				    	
@@ -68,8 +67,8 @@
 					      <tr md-row md-select="dessert" style="cursor:pointer" ng-click="$state.go( REPASSE_EDIT_STATE, {id:repasse.id} )" md-select-id="name" md-auto-select ng-repeat="repasse in model.repasse.page.content">
 					        <td md-cell >{{::repasse.id}}</td>
 					        <td md-cell >{{::repasse.casaLar.numero}}</td>
-					        <td md-cell >{{::repasse.created}}</td>
-					        <td md-cell >{{::repasse.telefone}}29</td>
+					        <td md-cell >{{::repasse.created.toLocaleDateString()}}</td>
+					        <td md-cell >{{::repasse.quantidadeProdutos}}</td>
 					        <td md-cell >{{::repasse.status | translate}}</td>
 					      </tr>
 					    </tbody>
