--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/movimentacao/movimentacao-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/movimentacao/movimentacao-form.html
@@ -122,7 +122,7 @@
 									            </md-input-container>
 									        </div>
 								            
-								            <div layout="row">
+								            <div layout="row" ng-if="model.movimentacao.entity.tipoMovimentacao != 'ENTRADA'">
 									            <md-input-container layout="column" flex="30" >
 										    		<label>Conta de origem</label>
 									                <input type="text" name="contaOrigem" disabled required ng-model="model.movimentacao.entity.contaOrigem.nome">
